Alignment fix
* Undo-ed the previous commit as it introduced a problem with the
alignment

--- a/nexusframework/css/framework.css
+++ b/nexusframework/css/framework.css
@@ -88,7 +88,6 @@ blockquote {
 /* DEFAULT IMAGE STYLING */
 .nxs-shadow 												{ box-shadow: 0 2px 6px rgba(10, 10, 10, 0.6); }
 .nxs-image-wrapper											{ width: 100%; height: 100%; top: 0px; left: 0px; overflow: hidden; }
-.nxs-image-wrapper.nxs-icon-center							{ display: block !important; } /* negate negative effects of "display:flex" styling */
 .nxs-stretch img,
 .nxs-stretch												{ width: 100% !important; height: auto !important; }
 .nxs-stretch.nxs-icon-left									{ float: none; }
